--- a/system_modes_examples/CMakeLists.txt
+++ b/system_modes_examples/CMakeLists.txt
@@ -66,7 +66,7 @@ install(TARGETS manipulator
 
 # mode file
 install(FILES example_modes.yaml
-  DESTINATION share
+  DESTINATION share/${PROJECT_NAME}/
 )
 
 ament_package()
