Very simple example of a launch file for the mode-manager.
Signed-off-by: Ralph Lange <ralph.lange@de.bosch.com>

--- a/system_modes_examples/CMakeLists.txt
+++ b/system_modes_examples/CMakeLists.txt
@@ -68,5 +68,6 @@ install(TARGETS manipulator
 install(FILES example_modes.yaml
   DESTINATION share/${PROJECT_NAME}/
 )
+install(DIRECTORY launch DESTINATION share/${PROJECT_NAME}/)
 
 ament_package()
