Created generic launch files for mode_manager and mode_monitor.
Signed-off-by: Ralph Lange <ralph.lange@de.bosch.com>

--- a/system_modes/CMakeLists.txt
+++ b/system_modes/CMakeLists.txt
@@ -86,6 +86,7 @@ target_include_directories(mode_manager PUBLIC
 target_link_libraries(mode_manager mode)
 install(TARGETS mode_manager
   DESTINATION lib/${PROJECT_NAME})
+install(DIRECTORY launch DESTINATION share/${PROJECT_NAME}/)
 
 # mode monitor
 add_executable(mode_monitor src/system_modes/mode_monitor.cpp
