Feature/launch file example (#12)
* Very simple example of a launch file for the mode-manager.
* Replaced dash by underscore in node executables.
* Add ROS parameter to pass path to model file.
* Created generic launch files for mode_manager and mode_monitor.
* Changed sample launch file to use new mode_manager launch file.

Signed-off-by: Ralph Lange <ralph.lange@de.bosch.com>

* Updated description of extended lifecycle
* Integrated with ROS 2 launch
* mode-monitor and mode-manager can now be started with ros2 launch by
passing the model file as launch argument
* system modes example nodes are now started with ros2 launch as well
* Launch descriptor for system + mode manager
* Cleanup, uncrustify

https://github.com/micro-ROS/system_modes/issues/11

Signed-off-by: Arne Nordmann <arne.nordmann@de.bosch.com>

Co-authored-by: Ralph Lange <ralph.lange@de.bosch.com>

--- a/system_modes_examples/CMakeLists.txt
+++ b/system_modes_examples/CMakeLists.txt
@@ -16,7 +16,7 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 endif()
 
 # find dependencies
-find_package(ament_cmake REQUIRED)
+find_package(ament_cmake_ros REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(rcl_lifecycle REQUIRED)
 find_package(rclcpp_lifecycle REQUIRED)
@@ -64,9 +64,13 @@ install(TARGETS manipulator
   EXPORT export_${PROJECT_NAME}
   DESTINATION lib/${PROJECT_NAME})
 
-# mode file
+  # launch
+install(DIRECTORY launch DESTINATION share/${PROJECT_NAME}/)
+
+# SMH file
 install(FILES example_modes.yaml
   DESTINATION share/${PROJECT_NAME}/
 )
+install(DIRECTORY launch DESTINATION share/${PROJECT_NAME}/)
 
 ament_package()
