More inference testing
Signed-off-by: Arne Nordmann <arne.nordmann@de.bosch.com>

--- a/system_modes/test/test_modes.yaml
+++ b/system_modes/test/test_modes.yaml
@@ -13,9 +13,9 @@ system:
         part1: active
       AA:
         part0: active.FOO
-        part1: active.BAR
+        part1: active.AAA
       BB:
-        part0: active.BBB
+        part0: active.BAR
         part1: active.BBB
 
 part0:
