Starts prototyping rules
* Prototypical rules in example modes file
* Adds mode handling class

Signed-off-by: Arne Nordmann <arne.nordmann@de.bosch.com>

--- a/system_modes_examples/example_modes.yaml
+++ b/system_modes_examples/example_modes.yaml
@@ -17,6 +17,27 @@ actuation:
       PERFORMANCE:
         manipulator: active.STRONG
         drive_base: active.FAST
+    rules:
+      degrade_from_MODERATE:
+        if_target: active.MODERATE
+        if_part: manipulator
+        if_part_actual: inactive
+        new_system_target: active.__DEFAULT__
+      degrade_from_PERFORMANCE:
+        if_target: active.PERFORMANCE
+        if_part: manipulator
+        if_part_actual: inactive
+        new_system_target: active.__DEFAULT__
+      inactive_from_MODERATE:
+        if_target: active.PERFORMANCE
+        if_part: drive_base
+        if_part_actual: inactive
+        new_system_target: inactive
+      inactive_from_PERFORMANCE:
+        if_target: active.PERFORMANCE
+        if_part: drive_base
+        if_part_actual: inactive
+        new_system_target: inactive
 
 manipulator:
   ros__parameters:
