Tests for StateAndMode struct
Signed-off-by: Arne Nordmann <arne.nordmann@de.bosch.com>

--- a/system_modes_examples/example_modes.yaml
+++ b/system_modes_examples/example_modes.yaml
@@ -27,7 +27,7 @@ actuation:
         if_part: [manipulator, inactive]
         new_target: active.__DEFAULT__
       inactive_from_MODERATE:
-        if_target: active.PERFORMANCE
+        if_target: active.MODERATE
         if_part: [drive_base, inactive]
         new_target: inactive
       inactive_from_PERFORMANCE:
