--- a/system_modes_examples/package.xml
+++ b/system_modes_examples/package.xml
@@ -14,6 +14,15 @@
   <depend>system_modes</depend>
   <depend>libboost-program-options-dev</depend>
 
+  <test_depend>ament_cmake_gtest</test_depend>
+  <test_depend>ament_cmake_gmock</test_depend>
+  <test_depend>ament_cmake_pep257</test_depend>
+  <test_depend>ament_cmake_flake8</test_depend>
+  <test_depend>ament_cmake_cpplint</test_depend>
+  <test_depend>ament_cmake_cppcheck</test_depend>
+  <test_depend>ament_cmake_uncrustify</test_depend>
+  <test_depend>ament_lint_auto</test_depend>
+  
   <export>
     <build_type>ament_cmake</build_type>
   </export>
