Reintroduce macos build and windows build
Signed-off-by: Arne Nordmann <arne.nordmann@de.bosch.com>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-18.04]
+        os: [ubuntu-18.04, macos-latest, windows-latest]
     steps:
       - uses: ros-tooling/setup-ros@master
       - uses: ros-tooling/action-ros-ci@master
