--- a/system_modes/package.xml
+++ b/system_modes/package.xml
@@ -21,6 +21,8 @@
   <depend>builtin_interfaces</depend>
   <depend>rosidl_default_generators</depend>
 
+  <exec_depend>launch_ros</exec_depend>
+
   <test_depend>ament_cmake_gtest</test_depend>
   <test_depend>ament_cmake_gmock</test_depend>
   <test_depend>ament_cmake_pep257</test_depend>
