--- a/system_modes_examples/package.xml
+++ b/system_modes_examples/package.xml
@@ -16,6 +16,8 @@
   <depend>rclcpp_lifecycle</depend>
   <depend>system_modes</depend>
 
+  <exec_depend>ros2launch</exec_depend>
+
   <test_depend>ament_cmake_gtest</test_depend>
   <test_depend>ament_cmake_gmock</test_depend>
   <test_depend>ament_cmake_pep257</test_depend>
