--- a/system_modes/package.xml
+++ b/system_modes/package.xml
@@ -15,11 +15,11 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <depend>builtin_interfaces</depend>
   <depend>rclcpp</depend>
   <depend>rclcpp_lifecycle</depend>
-  <depend>std_msgs</depend>
-  <depend>builtin_interfaces</depend>
   <depend>rosidl_default_generators</depend>
+  <depend>std_msgs</depend>
 
   <exec_depend>launch_ros</exec_depend>
 
@@ -30,7 +30,10 @@
   <test_depend>ament_cmake_cpplint</test_depend>
   <test_depend>ament_cmake_cppcheck</test_depend>
   <test_depend>ament_cmake_uncrustify</test_depend>
+  <test_depend>ament_index_python</test_depend>
   <test_depend>ament_lint_auto</test_depend>
+  <test_depend>launch_testing_ament_cmake</test_depend>
+  <test_depend>launch_testing_ros</test_depend>
 
   <member_of_group>rosidl_interface_packages</member_of_group>
 
