--- a/system_modes/test/launchtest/test_mode_manager_simple.launch.py.in
+++ b/system_modes/test/launchtest/test_mode_manager_simple.launch.py.in
@@ -48,10 +48,10 @@ def generate_test_description():
 
     return launch_description, locals()
 
-class TestAggregator(unittest.TestCase):
+class TestModeManagement(unittest.TestCase):
 
     def test_processes_output(self, proc_output, test_lifecycle_nodes):
-        """Check aggregator logging output for expected strings."""
+        """Check manager and nodes logging output for expected strings."""
 
         from launch_testing.tools.output import get_default_filtered_prefixes
         output_filter = launch_testing_ros.tools.basic_output_filter(
@@ -69,7 +69,7 @@ class TestAggregator(unittest.TestCase):
         time.sleep(1)
 
 @launch_testing.post_shutdown_test()
-class TestAggregatorShutdown(unittest.TestCase):
+class TestModeManagementShutdown(unittest.TestCase):
 
     def test_last_process_exit_code(self, proc_info, test_lifecycle_nodes):
         launch_testing.asserts.assertExitCodes(proc_info, process=test_lifecycle_nodes)
