Cleaned up launch tests
Signed-off-by: Nordmann Arne (CR/ADT3) <arne.nordmann@de.bosch.com>

--- a/system_modes/CMakeLists.txt
+++ b/system_modes/CMakeLists.txt
@@ -150,37 +150,27 @@ if(BUILD_TESTING)
   # Launch Tests
   find_package(ament_cmake_pytest REQUIRED)
   find_package(launch_testing_ament_cmake REQUIRED)
-  file(TO_CMAKE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/test/launchtest/example_modes.yaml" MODELFILE)
+  set(launch_tests
+    "two_lifecycle_nodes"           # Mode Manager with Lifecycle Nodes
+    "two_mixed_nodes")              # Mode Manager with Lifecycle and non-Lifecycle Nodes
 
   # Launch Test: Mode Manager with Lifecycle Nodes
-  file(TO_CMAKE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/test/launchtest/test_lifecycle_nodes.py" TEST_LIFECYCLE_NODES)
-  file(TO_CMAKE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/test/launchtest/test_mode_manager_simple_expected_output" EXPECTED_OUTPUT)
-  configure_file(
-      "test/launchtest/test_mode_manager_simple.launch.py.in"
-      "test/test_mode_manager_simple.launch.py"
-      @ONLY
+  foreach(test_name ${launch_tests})
+    file(TO_CMAKE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/test/launchtest/${test_name}.py" TEST_NODES)
+    file(TO_CMAKE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/test/launchtest/${test_name}_modes.yaml" MODELFILE)
+    file(TO_CMAKE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/test/launchtest/${test_name}_expected_output" EXPECTED_OUTPUT)
+    configure_file(
+        "test/launchtest/${test_name}.launch.py.in"
+        "test/${test_name}.launch.py"
+        @ONLY
+      )
+    add_launch_test(
+      "${CMAKE_CURRENT_BINARY_DIR}/test/${test_name}.launch.py"
+      TARGET "${test_name}"
+      TIMEOUT 30
+      ENV
     )
-  add_launch_test(
-    "${CMAKE_CURRENT_BINARY_DIR}/test/test_mode_manager_simple.launch.py"
-    TARGET "test_launch_mode_manager_simple"
-    TIMEOUT 30
-    ENV
-  )
-
-  # Launch Test: Mode Manager with Mixed (Lifecycle and non-Lifecycle) Nodes
-  file(TO_CMAKE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/test/launchtest/test_mixed_nodes.py" TEST_LIFECYCLE_NODES)
-  file(TO_CMAKE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/test/launchtest/test_mode_manager_mixed_nodes_expected_output" EXPECTED_OUTPUT)
-  configure_file(
-      "test/launchtest/test_mode_manager_mixed_nodes.launch.py.in"
-      "test/test_mode_manager_mixed_nodes.launch.py"
-      @ONLY
-    )
-  add_launch_test(
-    "${CMAKE_CURRENT_BINARY_DIR}/test/test_mode_manager_mixed_nodes.launch.py"
-    TARGET "test_launch_mode_manager_mixed_nodes"
-    TIMEOUT 30
-    ENV
-  )
+  endforeach()
 endif()
 
 ament_export_include_directories(include)
