--- a/system_modes/test/launchtest/two_mixed_nodes.launch.py.in
+++ b/system_modes/test/launchtest/two_mixed_nodes.launch.py.in
@@ -31,18 +31,18 @@ def generate_test_description():
                 'system_modes') + '/launch/mode_manager.launch.py'),
         launch_arguments={'modelfile': modelfile}.items())
 
-    test_lifecycle_nodes = ExecuteProcess(
+    test_nodes = ExecuteProcess(
         cmd=[
             "@PYTHON_EXECUTABLE@",
-            "@TEST_LIFECYCLE_NODES@"
+            "@TEST_NODES@"
             ],
-        name='test_lifecycle_nodes',
+        name='test_two_mixed_nodes',
         emulate_tty=True,
         output='screen')
 
     launch_description = LaunchDescription()
     launch_description.add_action(mode_manager)
-    launch_description.add_action(test_lifecycle_nodes)
+    launch_description.add_action(test_nodes)
     launch_description.add_action(launch_testing.util.KeepAliveProc())
     launch_description.add_action(launch_testing.actions.ReadyToTest())
 
@@ -50,7 +50,7 @@ def generate_test_description():
 
 class TestModeManagement(unittest.TestCase):
 
-    def test_processes_output(self, proc_output, test_lifecycle_nodes):
+    def test_processes_output(self, proc_output, test_nodes):
         """Check manager and nodes logging output for expected strings."""
 
         from launch_testing.tools.output import get_default_filtered_prefixes
@@ -60,7 +60,7 @@ class TestModeManagement(unittest.TestCase):
         )
         proc_output.assertWaitFor(
             expected_output=launch_testing.tools.expected_output_from_file(path="@EXPECTED_OUTPUT@"),
-            process=test_lifecycle_nodes,
+            process=test_nodes,
             output_filter=output_filter,
             timeout=15
         )
@@ -71,5 +71,5 @@ class TestModeManagement(unittest.TestCase):
 @launch_testing.post_shutdown_test()
 class TestModeManagementShutdown(unittest.TestCase):
 
-    def test_last_process_exit_code(self, proc_info, test_lifecycle_nodes):
-        launch_testing.asserts.assertExitCodes(proc_info, process=test_lifecycle_nodes)
+    def test_last_process_exit_code(self, proc_info, test_nodes):
+        launch_testing.asserts.assertExitCodes(proc_info, process=test_nodes)
