--- a/system_modes/CMakeLists.txt
+++ b/system_modes/CMakeLists.txt
@@ -113,6 +113,7 @@ if(BUILD_TESTING)
   configure_file(test/modefiles.h.in ${CMAKE_CURRENT_BINARY_DIR}/system_modes/modefiles.h)
   include_directories(BEFORE ${CMAKE_CURRENT_BINARY_DIR})
 
+  # Unit Tests
   ament_add_gtest(test_state_and_mode_struct test/test_state_and_mode_struct.cpp)
   if(TARGET test_state_and_mode_struct)
     target_include_directories(test_state_and_mode_struct PUBLIC
@@ -145,6 +146,32 @@ if(BUILD_TESTING)
     )
     target_link_libraries(test_mode_inference mode)
   endif()
+
+  # Launch Tests
+  find_package(ament_cmake_pytest REQUIRED)
+  find_package(launch_testing_ament_cmake REQUIRED)
+  set(launch_tests
+    "two_lifecycle_nodes"           # Mode Manager with Lifecycle Nodes
+    "two_mixed_nodes"               # Mode Manager with Lifecycle and non-Lifecycle Nodes
+    "two_independent_hierarchies")  # Mode Manager for two independent hierarchies of nodes
+
+  # Launch Test: Mode Manager with Lifecycle Nodes
+  foreach(test_name ${launch_tests})
+    file(TO_CMAKE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/test/launchtest/${test_name}.py" TEST_NODES)
+    file(TO_CMAKE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/test/launchtest/${test_name}_modes.yaml" MODELFILE)
+    file(TO_CMAKE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/test/launchtest/${test_name}_expected_output" EXPECTED_OUTPUT)
+    configure_file(
+        "test/launchtest/${test_name}.launch.py.in"
+        "test/${test_name}.launch.py"
+        @ONLY
+      )
+    add_launch_test(
+      "${CMAKE_CURRENT_BINARY_DIR}/test/${test_name}.launch.py"
+      TARGET "${test_name}"
+      TIMEOUT 30
+      ENV
+    )
+  endforeach()
 endif()
 
 ament_export_include_directories(include)
