--- a/system_modes_examples/package.xml
+++ b/system_modes_examples/package.xml
@@ -14,6 +14,7 @@
 
   <depend>rclcpp</depend>
   <depend>rclcpp_lifecycle</depend>
+  <depend>system_modes_msgs</depend>
   <depend>system_modes</depend>
 
   <exec_depend>ros2launch</exec_depend>
