--- a/system_modes_examples/package.xml
+++ b/system_modes_examples/package.xml
@@ -17,7 +17,9 @@
   <depend>system_modes_msgs</depend>
   <depend>system_modes</depend>
 
+  <exec_depend>launch</exec_depend>
   <exec_depend>ros2launch</exec_depend>
+  <exec_depend>launch_system_modes</exec_depend>
 
   <test_depend>ament_cmake_gtest</test_depend>
   <test_depend>ament_cmake_gmock</test_depend>
