--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,13 +18,13 @@ jobs:
         os: [ ubuntu-20.04 ]
         ros_distribution: [ foxy, rolling ]
     steps:
-    - uses: actions/checkout@v2
-    - uses: ros-tooling/setup-ros@0.0.26
+    - uses: actions/checkout@v2.3.1
+    - uses: ros-tooling/setup-ros@0.1.4
       with:
         required-ros-distributions: ${{ matrix.ros_distribution }}
-    - uses : ros-tooling/action-ros-ci@0.1.0
+    - uses : ros-tooling/action-ros-ci@0.2.0
       with:
-        package-name: "system_modes_msgs system_modes system_modes_examples"
+        package-name: "launch_system_modes system_modes system_modes_examples system_modes_msgs"
         target-ros2-distro: ${{ matrix.ros_distribution }}
         vcs-repo-file-url: ""
         colcon-mixin-name: coverage-gcc
