--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,7 +24,7 @@ jobs:
         required-ros-distributions: ${{ matrix.ros_distribution }}
     - uses : ros-tooling/action-ros-ci@v0.2
       with:
-        package-name: "launch_system_modes system_modes system_modes_examples system_modes_msgs"
+        package-name: "launch_system_modes system_modes system_modes_examples system_modes_msgs test_launch_system_modes "
         target-ros2-distro: ${{ matrix.ros_distribution }}
         colcon-defaults: |
           {
