--- a/test_launch_system_modes/package.xml
+++ b/test_launch_system_modes/package.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>system_modes_examples</name>
+  <name>test_launch_system_modes</name>
   <version>0.7.1</version>
   <description>
-    Simple example system and according launch files for the system_modes
-    package.
+    Launch tests for the launch_system_modes package, i.e. launch actions, events, and event
+    handlers for system modes.
   </description>
   <maintainer email="arne.nordmann@bosch.com">Arne Nordmann</maintainer>
   <license>Apache License 2.0</license>
@@ -16,14 +16,14 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <depend>builtin_interfaces</depend>
+  <depend>launch_system_modes</depend>
+  <depend>lifecycle_msgs</depend>
   <depend>rclcpp</depend>
   <depend>rclcpp_lifecycle</depend>
-  <depend>system_modes_msgs</depend>
   <depend>system_modes</depend>
-
-  <exec_depend>launch</exec_depend>
-  <exec_depend>ros2launch</exec_depend>
-  <exec_depend>launch_system_modes</exec_depend>
+  <depend>system_modes_msgs</depend>
+  <depend>system_modes_examples</depend>
 
   <test_depend>ament_cmake_gtest</test_depend>
   <test_depend>ament_cmake_gmock</test_depend>
@@ -32,7 +32,10 @@
   <test_depend>ament_cmake_cpplint</test_depend>
   <test_depend>ament_cmake_cppcheck</test_depend>
   <test_depend>ament_cmake_uncrustify</test_depend>
+  <test_depend>ament_index_python</test_depend>
   <test_depend>ament_lint_auto</test_depend>
+  <test_depend>launch_testing_ament_cmake</test_depend>
+  <test_depend>launch_testing_ros</test_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
