--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,7 +19,7 @@ jobs:
         ros_distribution: [ foxy, rolling ]
     steps:
     - uses: actions/checkout@v2.3.1
-    - uses: ros-tooling/setup-ros@0.1.4
+    - uses: ros-tooling/setup-ros@v0.2
       with:
         required-ros-distributions: ${{ matrix.ros_distribution }}
     - uses : ros-tooling/action-ros-ci@v0.2
