--- a/test_launch_system_modes/test/node_test.launch.py.in
+++ b/test_launch_system_modes/test/node_test.launch.py.in
@@ -38,17 +38,22 @@ def generate_test_description():
         ])
 
     drive_base = launch_system_modes.actions.Node(
-            package='system_modes_examples',
-            executable='drive_base',
-            name='drive_base',
-            namespace='',
-            output='screen')
+        package='system_modes_examples',
+        executable='drive_base',
+        name='drive_base',
+        namespace='',
+        output='screen')
 
     # Startup
-    drive_base_configure = launch.actions.EmitEvent(
-        event=launch_ros.events.lifecycle.ChangeState(
-            lifecycle_node_matcher=launch.events.matchers.matches_action(drive_base),
-            transition_id=lifecycle_msgs.msg.Transition.TRANSITION_CONFIGURE))
+    drive_base_configure = launch.actions.TimerAction(
+        period=2.,
+        actions=[
+            launch.actions.EmitEvent(
+                event=launch_ros.events.lifecycle.ChangeState(
+                    lifecycle_node_matcher=launch.events.matchers.matches_action(drive_base),
+                    transition_id=lifecycle_msgs.msg.Transition.TRANSITION_CONFIGURE))
+        ]
+    )
 
     drive_base_activate = launch.actions.EmitEvent(
         event=launch_ros.events.lifecycle.ChangeState(
@@ -115,9 +120,6 @@ class TestModeManagement(unittest.TestCase):
             output_filter=output_filter,
             timeout=15
         )
-
-        import time
-        time.sleep(1)
 
 @launch_testing.post_shutdown_test()
 class TestModeManagementShutdown(unittest.TestCase):
