--- a/test_launch_system_modes/test/system_test.launch.py.in
+++ b/test_launch_system_modes/test/system_test.launch.py.in
@@ -56,10 +56,14 @@ def generate_test_description():
             output='screen')
 
     # Startup
-    actuation_configure = launch.actions.EmitEvent(
-        event=launch_system_modes.events.ChangeState(
-            system_part_matcher=launch.events.matchers.matches_action(actuation),
-            transition_id=lifecycle_msgs.msg.Transition.TRANSITION_CONFIGURE))
+    actuation_configure = launch.actions.TimerAction(
+        period=2.,
+        actions=[launch.actions.EmitEvent(
+            event=launch_system_modes.events.ChangeState(
+                system_part_matcher=launch.events.matchers.matches_action(actuation),
+                transition_id=lifecycle_msgs.msg.Transition.TRANSITION_CONFIGURE))
+        ]
+    )
 
     actuation_activate = launch.actions.EmitEvent(
         event=launch_system_modes.events.ChangeState(
@@ -128,9 +132,6 @@ class TestModeManagement(unittest.TestCase):
             output_filter=output_filter,
             timeout=15
         )
-
-        import time
-        time.sleep(1)
 
 @launch_testing.post_shutdown_test()
 class TestModeManagementShutdown(unittest.TestCase):
