--- a/test_launch_system_modes/test/system_test.launch.py.in
+++ b/test_launch_system_modes/test/system_test.launch.py.in
@@ -56,10 +56,14 @@ def generate_test_description():
             output='screen')
 
     # Startup
-    actuation_configure = launch.actions.EmitEvent(
-        event=launch_system_modes.events.ChangeState(
-            system_part_matcher=launch.events.matchers.matches_action(actuation),
-            transition_id=lifecycle_msgs.msg.Transition.TRANSITION_CONFIGURE))
+    actuation_configure = launch.actions.TimerAction(
+        period=2.,
+        actions=[launch.actions.EmitEvent(
+            event=launch_system_modes.events.ChangeState(
+                system_part_matcher=launch.events.matchers.matches_action(actuation),
+                transition_id=lifecycle_msgs.msg.Transition.TRANSITION_CONFIGURE))
+        ]
+    )
 
     actuation_activate = launch.actions.EmitEvent(
         event=launch_system_modes.events.ChangeState(
@@ -99,8 +103,6 @@ def generate_test_description():
             entities=[actuation_change_mode_to_FAST]))
 
     launch_description = LaunchDescription()
-    launch_description.add_action(launch_testing.util.KeepAliveProc())
-    launch_description.add_action(launch_testing.actions.ReadyToTest())
     launch_description.add_action(mode_manager)
     launch_description.add_action(actuation)
     launch_description.add_action(drive_base)
@@ -108,6 +110,8 @@ def generate_test_description():
     launch_description.add_action(on_inactive_handler)
     launch_description.add_action(on_active_handler)
     launch_description.add_action(on_DEFAULT_mode)
+    launch_description.add_action(launch_testing.util.KeepAliveProc())
+    launch_description.add_action(launch_testing.actions.ReadyToTest())
     launch_description.add_action(actuation_configure)
 
     return launch_description, locals()
@@ -128,9 +132,6 @@ class TestModeManagement(unittest.TestCase):
             output_filter=output_filter,
             timeout=15
         )
-
-        import time
-        time.sleep(1)
 
 @launch_testing.post_shutdown_test()
 class TestModeManagementShutdown(unittest.TestCase):
