--- a/launch_system_modes/package.xml
+++ b/launch_system_modes/package.xml
@@ -4,8 +4,11 @@
   schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>launch_system_modes</name>
-  <version>0.7.1</version>
-  <description>System modes specific extensions to the launch tool.</description>
+  <version>0.8.0</version>
+  <description>
+    System modes specific extensions to the launch tool, i.e. launch actions, events, and event
+    handlers for system modes.
+  </description>
   <maintainer email="arne.nordmann@de.bosch.com">Arne Nordmann</maintainer>
   <license>Apache License 2.0</license>
 
