--- a/system_modes_examples/package.xml
+++ b/system_modes_examples/package.xml
@@ -2,9 +2,9 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>system_modes_examples</name>
-  <version>0.7.1</version>
+  <version>0.8.0</version>
   <description>
-    Simple example system and according launch files for the system_modes
+    Example systems and according launch files for the system_modes
     package.
   </description>
   <maintainer email="arne.nordmann@bosch.com">Arne Nordmann</maintainer>
