--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: "Build action: Foxy + Rolling"
+name: "CI: foxy, galactic, rolling"
 
 on:
   push:
@@ -16,7 +16,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ ubuntu-20.04 ]
-        ros_distribution: [ foxy, rolling ]
+        ros_distribution: [ foxy, galactic, rolling ]
     steps:
     - uses: actions/checkout@v2.3.4
     - uses: ros-tooling/setup-ros@v0.2
