Fixed default modes in example files
Signed-off-by: Nordmann Arne (CR/ADT3) <arne.nordmann@de.bosch.com>

--- a/system_modes_examples/example_modes.yaml
+++ b/system_modes_examples/example_modes.yaml
@@ -40,6 +40,7 @@ actuation:
 manipulator:
   ros__parameters:
     type: node
+    defaultmode: DEFAULT
     modes:
       WEAK:
         ros__parameters:
@@ -47,7 +48,7 @@ manipulator:
       STRONG:
         ros__parameters:
           max_torque: 0.2
-      __DEFAULT__:
+      DEFAULT:
         ros__parameters:
           max_torque: 0.1
 
