Fix codecov configuration (ignores pathes)
Signed-off-by: Nordmann Arne (CR/ADT3) <arne.nordmann@de.bosch.com>

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,4 +1,6 @@
 ignore:
-  - "system_modes_examples"
-  - "system_modes/test"
-  - "**/*_node.cpp"
+  - "launch_system_modes/test/*"
+  - "system_modes_examples/*"
+  - "system_modes/test/*"
+  - "test_launch_system_modes/*"
+  - "**/src/*_node.cpp"
