--- a/codecov.yml
+++ b/codecov.yml
@@ -1,4 +1,11 @@
+fixes:
+  - "ros_ws/src/*/rclc::"
 ignore:
-  - "system_modes_examples"
-  - "system_modes/test"
-  - "**/*_node.cpp"
+  - "launch_system_modes/resource/*"
+  - "launch_system_modes/test/*"
+  - "system_modes_examples/**/*"
+  - "system_modes/src/*_node.cpp"
+  - "system_modes/test/*"
+  - "system_modes/test/**/*"
+  - "system_modes/test/**/*"
+  - "test_launch_system_modes/test/*"
