--- a/system_modes/package.xml
+++ b/system_modes/package.xml
@@ -11,6 +11,7 @@
     terms of their parameter values.
   </description>
   <maintainer email="arne.nordmann@bosch.com">Arne Nordmann</maintainer>
+  <maintainer email="ralph.lange@de.bosch.com">Ralph Lange</maintainer>
   <license>Apache License 2.0</license>
 
   <url type="website">https://micro.ros.org/docs/concepts/client_library/lifecycle_and_system_modes/</url>
