--- a/test_launch_system_modes/package.xml
+++ b/test_launch_system_modes/package.xml
@@ -7,7 +7,7 @@
     Launch tests for the launch_system_modes package, i.e. launch actions, events, and event
     handlers for system modes.
   </description>
-  <maintainer email="arne.nordmann@bosch.com">Arne Nordmann</maintainer>
+  <maintainer email="github@norro.de">Arne Nordmann</maintainer>
   <maintainer email="ralph.lange@de.bosch.com">Ralph Lange</maintainer>
   <license>Apache License 2.0</license>
 
