--- a/system_modes_examples/package.xml
+++ b/system_modes_examples/package.xml
@@ -7,7 +7,7 @@
     Example systems and according launch files for the system_modes
     package.
   </description>
-  <maintainer email="arne.nordmann@bosch.com">Arne Nordmann</maintainer>
+  <maintainer email="github@norro.de">Arne Nordmann</maintainer>
   <maintainer email="ralph.lange@de.bosch.com">Ralph Lange</maintainer>
   <license>Apache License 2.0</license>
 
