--- a/system_modes_msgs/package.xml
+++ b/system_modes_msgs/package.xml
@@ -7,7 +7,7 @@
     Interface package, containing message definitions and service definitions
     for the system modes package.
   </description>
-  <maintainer email="arne.nordmann@bosch.com">Arne Nordmann</maintainer>
+  <maintainer email="github@norro.de">Arne Nordmann</maintainer>
   <maintainer email="ralph.lange@de.bosch.com">Ralph Lange</maintainer>
   <license>Apache License 2.0</license>
 
