--- a/test_launch_system_modes/package.xml
+++ b/test_launch_system_modes/package.xml
@@ -7,13 +7,15 @@
     Launch tests for the launch_system_modes package, i.e. launch actions, events, and event
     handlers for system modes.
   </description>
-  <maintainer email="github@norro.de">Arne Nordmann</maintainer>
-  <maintainer email="ralph.lange@de.bosch.com">Ralph Lange</maintainer>
+  <maintainer email="ros-orphaned-packages@googlegroups.com">Unmaintained see http://wiki.ros.org/MaintenanceGuide#Claiming_Maintainership</maintainer>
   <license>Apache License 2.0</license>
 
   <url type="website">https://micro.ros.org/docs/concepts/client_library/lifecycle_and_system_modes/</url>
   <url type="repository">https://github.com/micro-ROS/system_modes</url>
   <url type="bugtracker">https://github.com/micro-ROS/system_modes/issues</url>
+
+  <author email="github@norro.de">Arne Nordmann</author>
+  <author email="ralph.lange@de.bosch.com">Ralph Lange</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
